practice_11_12/exec_check.txt
  File "<string>", line 19
    print(f'Cell {i+1} ({cell[\
          ^
SyntaxError: unterminated string literal (detected at line 19)
